# Calc24

./: .clangd  .gitignore  CMakeLists.txt  README.md  cqltr.py  gen_results.py  timer.py  xmake.lua
console/: calc.cpp  eval.cpp  main.cpp  play.cpp  utils.h
cqltr/: cqltr.cpp  cqltr.h  expr.cpp  expr.h
